2004-11-26  James A. Morrison  <phython@gcc.gnu.org>

PR middle-end/18596
        * c-decl.c (grokdeclarator): Reset DECL_INTIAL to error_mark_node
        on errors.

testsuite:
        * gcc.dg/pr18596-1.c: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@91504 138bc75d-0d04-0410-961f-82ee72b054a4